# i3owm

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: arg.yaml  i3status.rs  level.rs  main.rs  notify.rs  spot.rs  tests.rs  weather.rs
