[package]
name = "i3owm"
version = "0.2.6-beta.1"
authors = ["Patrick Hoffmann fightling@elektropost.org>"]
edition = "2018"
description = "Open Weather extension for i3status"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/i3owm"
homepage = "http://i3owm.thats-software.com"
keywords = ["weather", "i3wm", "i3status" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
chrono = "0.4.7"
i3status_ext = "0.1.0-beta.1"
openweathermap = "0.2.0-beta.1"
